# chatbot

./: README.md
backend/: Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: api.py  config.py  db.py  openai.py
backend/app/assistants/: prompts.py  tools.py
backend/app/utils/: splitter.py
frontend/: index.html
frontend/src/: App.jsx
frontend/src/components/: Chatbot.jsx
